@@ -16,7 +16,9 @@ Lib/
   trace levels
 * Now tag [1] is used in ldap.extop.dds.RefreshResponse in
   compliance with RFC 2589 (fix available for OpenLDAP ITS#6886)
-
+* New sub-module ldap.controls.sessiontrack implements request control
+  as described in draft-wahl-ldap-session (needs pyasn1_modules)
+  
 ----------------------------------------------------------------
 Released 2.4.0 2011-06-02
 
